# rust_budget

./: .gitignore  Cargo.toml  \  config.toml
data/: users.json
src/: lib.rs  main.rs
src/app/: app.rs  app_config.rs  app_state.rs  application.rs  mod.rs  repositories.rs
src/controllers/: account_controller.rs  assignment_controller.rs  budget_controller.rs  category_controller.rs  currency_controller.rs  mod.rs  payee_controller.rs  super_category_controller.rs  super_transaction_controller.rs  transaction_controller.rs  user_controller.rs
src/domain/: account.rs  account_type.rs  assignment.rs  budget.rs  category.rs  currency.rs  mod.rs  payee.rs  super_category.rs  super_transaction.rs  transaction.rs  user.rs
src/repository/: traits.rs
src/repository/file/: account_repo.rs  assignment_repo.rs  budget_repo.rs  category_repo.rs  currency_repo.rs  file_helper.rs  mod.rs  payee_repo.rs  super_category_repo.rs  super_transaction_repo.rs  transaction_repo.rs  user_repo.rs
src/services/: account_service.rs  assignment_service.rs  budget_service.rs  category_service.rs  currency_service.rs  mod.rs  payee_service.rs  super_category_service.rs  super_transaction_service.rs  transaction_service.rs  user_service.rs
src/util/: error.rs  id_generator.rs  mod.rs  validators.rs
