[package]
name = "budget"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
uuid = {version = "1", features = ["v4", "serde"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
toml = "0.9.5"
anyhow = "1.0.99"
thiserror = "2.0.17"
